# excel-number-formatter

./: .gitignore  CMakeLists.txt  main.cpp
controllers/: file_handler.cpp  file_handler.h
output/: output_new.xlsx  output_old.xlsx
pages/: mainwindow.cpp  mainwindow.h
